--- a/README
+++ b/README
@@ -1,5 +1,10 @@
--- StyledWebView
+Styled Web View
+===============
+
+.. image:: http://www.flickr.com/photos/63734774@N05/6448073357/
+   :width: 320
+   :height: 97
 
 This is a custom WebView that allows you to load external web pages and inject css on the fly.
-* CSS is read from a file in ./assets/ directory
-* CSS is inject between <head></head> tags 
+  * CSS is read from a file in ./assets/ directory
+  * CSS is inject between <head></head> tags 
